log
Wed 22 Mar 2023 11:19:22 AM UTC: 
 tests:  0|6
total_score: 0/70
c4c78b5
Thu 23 Mar 2023 01:00:54 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: unknown type name ‘list’; did you mean ‘List’?
   33 |   list v = (list*) malloc(sizeof(Node))
      |   ^~~~
      |   List
list.c:33:13: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   33 |   list v = (list*) malloc(sizeof(Node))
      |             ^~~~
      |             List
list.c:33:13: note: each undeclared identifier is reported only once for each function it appears in
list.c:33:18: error: expected expression before ‘)’ token
   33 |   list v = (list*) malloc(sizeof(Node))
      |                  ^
list.c:33:8: error: unused variable ‘v’ [-Werror=unused-variable]
   33 |   list v = (list*) malloc(sizeof(Node))
      |        ^
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
   35 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
15d6eec
